k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nova-gps
  labels:
    app.kubernetes.io/name: nova-gps
